--- a/sass/base/_animation.scss
+++ b/sass/base/_animation.scss
@@ -1,13 +1,43 @@
 @keyframes zoomInRightBottom {
   0% {
-    opacity: 0.8;
+    // opacity: 0.8;
     transform: translateX(100%) rotateY(65deg) scale(0.8);
   }
 }
 
+
 @keyframes zoomOutLeftBottom {
   100% {
-    opacity: 0.3;
+    // opacity: 0.3;
     transform: translateX(-100%) rotateY(-65deg) scale(0.8);
   }
 }
+
+@keyframes zoomInRightBottom-phone {
+  0% {
+    // opacity: 0.8;
+    transform: translate(100%,50%)  scale(0.8);
+  }
+}
+
+@keyframes zoomOutLeftBottom-phone {
+  100% {
+    // opacity: 0.3;
+    transform: translate(-100%,10%) scale(0.8);
+  }
+}
+
+
+// @keyframes zoomInRightBottom {
+//   0% {
+//     // opacity: 0.8;
+//     transform: translateX(500%);
+//   }
+// }
+
+// @keyframes zoomOutLeftBottom {
+//   100% {
+//     // opacity: 0.3;
+//     transform: translateX(-500%) ;
+//   }
+// }
